--- a/LaBuilderApp/LaBuilderAppPage.xaml
+++ b/LaBuilderApp/LaBuilderAppPage.xaml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:LaBuilderApp" x:Class="LaBuilderApp.LaBuilderAppPage">
-	<Label Text="Hello world! ;)" VerticalOptions="Center" HorizontalOptions="Center" />
+	<StackLayout Orientation="Vertical">
+		<Label Text="Hello world! ;)" VerticalOptions="Center" HorizontalOptions="Center" />
+		<ListView x:Name="lvTest" ItemsSource="{x:Static local:Exhibition.All}">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+						<ViewCell>
+							<ViewCell.View>
+								<Label Text="{Binding Title}"/>
+							</ViewCell.View>
+						</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+	</StackLayout>
 </ContentPage>
