--- a/LaBuilderApp/MainAppPage.xaml
+++ b/LaBuilderApp/MainAppPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LaBuilderApp.MainAppPage"
-	Title="LaBuilderApp" BackgroundColor="Lime">
+	Title="LaBuilderApp" BackgroundColor="Transparent">
 	<MasterDetailPage.Content>
 	</MasterDetailPage.Content>
 </MasterDetailPage>
