--- a/LaBuilderApp/MenuPage.xaml
+++ b/LaBuilderApp/MenuPage.xaml
@@ -6,11 +6,11 @@
 
      	 	<Image Source="{local:ImageResource R2BuildersLogo.png}" Aspect="AspectFill" />
 
-			<ListView x:Name="theList" ItemsSource="{x:Static local:MenuManager.All}" HasUnevenRows="true" IsGroupingEnabled="true" SeparatorVisibility="None" VerticalOptions="Fill" BackgroundColor="Black" Margin="0,0,12,0">
+			<ListView x:Name="theList" ItemsSource="{x:Static local:MenuManager.All}" HasUnevenRows="true" IsGroupingEnabled="true" SeparatorVisibility="None" VerticalOptions="Fill" BackgroundColor="White" Margin="0,0,12,0">
 				<ListView.GroupHeaderTemplate>
 					<DataTemplate>
 						<ViewCell Height="17">
-							<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="Black" Padding="0,0,0,0">
+							<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="White" Padding="0,0,0,0">
 								<Label Text="{Binding Title}" Font="Bold" FontSize="17" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" />
 							</StackLayout>
 						</ViewCell>
@@ -19,7 +19,7 @@
 		        <ListView.ItemTemplate>
 			        <DataTemplate>
 			        	<ViewCell Height="54">
-			        		<Grid HorizontalOptions="Fill" ColumnSpacing="6" RowSpacing="0" Padding="6,0,6,0" BackgroundColor="Gray">
+			        		<Grid HorizontalOptions="Fill" ColumnSpacing="6" RowSpacing="0" Padding="6,0,6,0" BackgroundColor="White">
     					        <Grid.ColumnDefinitions>
 						            <ColumnDefinition Width="50"/>
 						            <ColumnDefinition Width="*"/>
@@ -29,8 +29,8 @@
 						        	<RowDefinition Height="20" />
 						        </Grid.RowDefinitions>
 						        <Image Source="{Binding Image}" WidthRequest="50" Grid.RowSpan="2" />
-						        <Label Text="{Binding Title}" Font="Bold" FontSize="17" TextColor="White" Grid.Column="1" />
-						        <Label Text="{Binding Detail}" FontSize="14" TextColor="White" Grid.Column="1" Grid.Row="1" />
+						        <Label Text="{Binding Title}" Font="Bold" FontSize="17" TextColor="Black" Grid.Column="1" />
+						        <Label Text="{Binding Detail}" FontSize="14" TextColor="Black" Grid.Column="1" Grid.Row="1" />
 			        		</Grid>
 			        	</ViewCell>
 			        </DataTemplate>
