--- a/LaBuilderApp/Views/ViewAgenda.xaml
+++ b/LaBuilderApp/Views/ViewAgenda.xaml
@@ -6,22 +6,22 @@
 		<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" HeightRequest="24">
 			<Button x:Name="btPreviousYear" Text="&lt;" FontSize="20" FontAttributes="Bold" Margin="0" />
 			<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-				<Label x:Name="lYear" Text="Agenda 2017" FontSize="16" VerticalTextAlignment="Center" />
+				<Label x:Name="lYear" Text="Agenda 2017" FontSize="16" TextColor="#5AA9D3" VerticalTextAlignment="Center" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal" HorizontalOptions="End">
-				<Button x:Name="btNextYear" Text="&gt;" FontSize="20" FontAttributes="Bold"/>
+				<Button x:Name="btNextYear" Text="&gt;" FontSize="20" FontAttributes="Bold" Margin="0"/>
 			</StackLayout>
 		</StackLayout>
-		<ListView x:Name="lvExhibition" ItemsSource="{x:Static local:Exhibition.DesignData}">
+		<ListView x:Name="lvExhibition" ItemsSource="{x:Static local:Exhibition.DesignData}" BackgroundColor="Black" SeparatorColor="Transparent" >
 			<ListView.ItemTemplate>
 				<DataTemplate>
 						<ViewCell>
 							<ViewCell.View>
 								<StackLayout Orientation="Horizontal">
 									<Image Source="{Binding LogoImage}" WidthRequest="100" HeightRequest="50" Aspect="AspectFit" />
-									<StackLayout Orientation="Vertical">
-										<Label Text="{Binding Title}" FontSize="14" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding DateEvent}" FontSize="10" LineBreakMode="TailTruncation"/>
+									<StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand">
+										<Label Text="{Binding Title, StringFormat=' {0}'}" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="14" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding DateEvent}" TextColor="White" FontSize="10" LineBreakMode="TailTruncation"/>
 									</StackLayout>
 								</StackLayout>
 							</ViewCell.View>
