--- a/LaBuilderApp/Views/ViewAbout.xaml
+++ b/LaBuilderApp/Views/ViewAbout.xaml
@@ -4,10 +4,10 @@
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand">
 		<Label Text="Application" FontSize="14" BackgroundColor="White"/>
-			<Label x:Name="lApp" FontSize="12" TextColor="White" />
-			<Label Text="Plateforme" FontSize="14" BackgroundColor="White"/>
-			<Label x:Name="lDevice" FontSize="12" TextColor="White"/>
-		<WebView x:Name="theWebview" VerticalOptions="FillAndExpand" Source="http://www.r2builders.fr/disclaimer.php" />
+		<Label x:Name="lApp" FontSize="12" TextColor="White" />
+		<Label Text="Plateforme" FontSize="14" BackgroundColor="White"/>
+		<Label x:Name="lDevice" FontSize="12" TextColor="White"/>
+		<WebView x:Name="theWebview" VerticalOptions="FillAndExpand" Source="http://www.r2builders.fr/disclaimer.php" WidthRequest="3000" HeightRequest="3000" />
 	</StackLayout>
 	</ContentView.Content>
 </ContentView>
