--- a/LaBuilderApp/Views/ViewAgenda.xaml
+++ b/LaBuilderApp/Views/ViewAgenda.xaml
@@ -2,14 +2,14 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LaBuilderApp.ViewAgenda" 
 	 xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
-	<StackLayout Orientation="Vertical">
-		<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" HeightRequest="24">
-			<Button x:Name="btPreviousYear" Text="&lt;" FontSize="20" FontAttributes="Bold" Margin="0" />
+	<StackLayout Orientation="Vertical" HeightRequest="3000">
+		<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" HeightRequest="50">
+			<Button x:Name="btPreviousYear" Text="&lt;" FontSize="20" FontAttributes="Bold" Margin="0" HeightRequest="50" WidthRequest="30" BackgroundColor="Transparent" TextColor="#5AA9D3" HorizontalOptions="Center" VerticalOptions="Center" BorderWidth="0" />
 			<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
 				<Label x:Name="lYear" Text="Agenda 2017" FontSize="16" TextColor="#5AA9D3" VerticalTextAlignment="Center" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal" HorizontalOptions="End">
-				<Button x:Name="btNextYear" Text="&gt;" FontSize="20" FontAttributes="Bold" Margin="0"/>
+				<Button x:Name="btNextYear" Text="&gt;" FontSize="20" FontAttributes="Bold" Margin="0" HeightRequest="50" WidthRequest="30" BackgroundColor="Transparent" TextColor="#5AA9D3" HorizontalOptions="Center" VerticalOptions="Center" BorderWidth="0" />
 			</StackLayout>
 		</StackLayout>
 		<ListView x:Name="lvExhibition" ItemsSource="{x:Static local:Exhibition.DesignData}" BackgroundColor="Black" SeparatorColor="Transparent" >
