--- a/LaBuilderApp/Views/ViewBuilders.xaml
+++ b/LaBuilderApp/Views/ViewBuilders.xaml
@@ -3,7 +3,7 @@
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
-		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" BackgroundColor="Black" SeparatorColor="Transparent" >
+		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorColor="Transparent" >
 			<ListView.ItemTemplate>
 				<DataTemplate>
 						<ViewCell>
