--- a/LaBuilderApp/Views/ViewBuilders.xaml
+++ b/LaBuilderApp/Views/ViewBuilders.xaml
@@ -3,16 +3,25 @@
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
-		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorColor="Transparent" >
+		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" GroupShortNameBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorColor="Transparent" >
+			<ListView.GroupHeaderTemplate>
+				<DataTemplate>
+					<ViewCell Height="20">
+						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#5AA9D3" Padding="6,0">
+							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#11252D" HorizontalOptions="Start" YAlign="Center"  />
+						</StackLayout>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.GroupHeaderTemplate>
 			<ListView.ItemTemplate>
 				<DataTemplate>
 						<ViewCell>
 							<ViewCell.View>
-								<StackLayout Orientation="Horizontal">
+								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="50">
 									<Image Source="{Binding AvatarImage}" WidthRequest="50" HeightRequest="50" Aspect="AspectFit" />
-									<StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand">
-										<Label Text="{Binding Username, StringFormat=' {0}'}" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="14" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding Since, StringFormat=' Builder depuis {0}'}}" TextColor="White" FontSize="10" LineBreakMode="TailTruncation"/>
+									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="50">
+										<Label Text="{Binding Username, StringFormat=' {0}'}" YAlign="Center" HeightRequest="25" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="20" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding Since, StringFormat=' Builder depuis {0}'}}" YAlign="Center" HeightRequest="25" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
 									</StackLayout>
 								</StackLayout>
 							</ViewCell.View>
