--- a/LaBuilderApp/Views/ViewAgenda.xaml
+++ b/LaBuilderApp/Views/ViewAgenda.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LaBuilderApp.ViewAgenda" 
-	 xmlns:local="clr-namespace:LaBuilderApp" xmlns:ffi="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
+	 xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
 		<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" HeightRequest="50">
