--- a/LaBuilderApp/Views/ViewThings.xaml
+++ b/LaBuilderApp/Views/ViewThings.xaml
@@ -3,16 +3,26 @@
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
-		<ListView x:Name="lvThing" ItemsSource="{x:Static local:Thing.DesignData}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorVisibility="None" SeparatorColor="Transparent" >
+		<ListView x:Name="lvThing" ItemsSource="{x:Static local:Thing.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorVisibility="None" SeparatorColor="Transparent" >
+			<ListView.GroupHeaderTemplate>
+				<DataTemplate>
+					<ViewCell Height="20">
+						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#5AA9D3" Padding="6,0">
+							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#11252D" HorizontalOptions="Start" YAlign="Center"  />
+						</StackLayout>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.GroupHeaderTemplate>
 			<ListView.ItemTemplate>
 				<DataTemplate>
 						<ViewCell>
 							<ViewCell.View>
-								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="50">
-									<Image Source="{Binding PictureImage}" WidthRequest="50" HeightRequest="50" Aspect="AspectFit" BackgroundColor="White" />
-									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="50">
+								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="100">
+									<Image Source="{Binding PictureImage}" WidthRequest="100" HeightRequest="100" Aspect="AspectFit" BackgroundColor="White" />
+									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="100">
 										<Label Text="{Binding Name, StringFormat=' {0}'}" YAlign="Center" HeightRequest="25" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="20" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding Description, StringFormat=' {0}'}}" YAlign="Center" HeightRequest="25" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding Builder, StringFormat=' Builder : {0}'}}" YAlign="Center" HeightRequest="25" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding Description, StringFormat=' {0}'}}" YAlign="Start" HeightRequest="50" TextColor="White" FontSize="16" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap"/>
 									</StackLayout>
 								</StackLayout>
 							</ViewCell.View>
