--- a/LaBuilderApp/Views/ViewThings.xaml
+++ b/LaBuilderApp/Views/ViewThings.xaml
@@ -22,7 +22,7 @@
 									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="100">
 										<Label Text="{Binding Name, StringFormat=' {0}'}" YAlign="Center" HeightRequest="25" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="20" LineBreakMode="TailTruncation"/>
 										<Label Text="{Binding Builder, StringFormat=' Builder : {0}'}}" YAlign="Center" HeightRequest="25" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding Description, StringFormat=' {0}'}}" YAlign="Start" HeightRequest="50" TextColor="White" FontSize="16" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap"/>
+										<Label Text="{Binding DescriptionLabel, StringFormat=' {0}'}}" YAlign="Start" HeightRequest="50" TextColor="White" FontSize="16" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap"/>
 									</StackLayout>
 								</StackLayout>
 							</ViewCell.View>
