thingstype from server little design and debug

--- a/LaBuilderApp/Views/PageThing.xaml
+++ b/LaBuilderApp/Views/PageThing.xaml
@@ -21,6 +21,7 @@
 
 					<StackLayout Orientation="Vertical" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">
 						<Label Text="{Binding Name}" FontSize="17" HorizontalOptions="Center" TextColor="White" />
+						<Label Text="{Binding Builder, StringFormat='par {0}'}" FontSize="17" HorizontalOptions="Center" TextColor="White" />
 						<Image Source="{Binding PictureImage}" Aspect="AspectFit" WidthRequest="4000" HorizontalOptions="Center" />
 						<Label Text="{Binding Duree, StringFormat='Durée de la construction : {0}'}}" FontSize="14" TextColor="White" HorizontalOptions="Center" />
 						<Label Text="{Binding DescriptionLabel}" LineBreakMode="WordWrap" FontSize="15" TextColor="White"/>
