--- a/LaBuilderApp/Views/ViewNews.xaml
+++ b/LaBuilderApp/Views/ViewNews.xaml
@@ -6,11 +6,7 @@
 			<Label.FormattedText>
 				<FormattedString>
 				<Span Text="Bonjour et bienvenue sur l'application des Builders." />
-				<Span Text="&#10;&#10;Cette application permet de connaitre les événements auxquels participent les Builders. Vous avez la liste des événements passés mais aussi à venir. Vous pourrez ainsi aller à la rencontre des Builders." />
-				<Span Text="&#10;Pour chaque événement vous avez un détail complet avec notamment la liste des Builders qui sont présents." />
-				<Span Text="&#10;L’application vous donne également la liste des Builders du club. Pour chaque Builder, vous avez une fiche détaillée présentant le Builder." />
-				<Span Text="&#10;&#10;À venir :" />
-				<Span Text="&#10;Les constructions créées par les Builders et les événements où ils ont été vus ou seront visibles. Parmi ces constructions vous trouverez bien évidemment différentes unités Astromech comme R2-D2 mais vous découvrirez surtout la grande variétés des créations des Builder : cosplay, grenade de proximité, grenade thermique, fusion reactor, ..." />
+				<Span Text="&#10;&#10;Cette application permet de connaitre les événements auxquels participent les Builders. Vous pourrez ainsi aller à leur rencontre et découvrir leurs créations." />
 				</FormattedString>
 			</Label.FormattedText>
 		</Label>
