--- a/LaBuilderApp/GameR2finder/ViewGameR2Finder.xaml
+++ b/LaBuilderApp/GameR2finder/ViewGameR2Finder.xaml
@@ -2,27 +2,18 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LaBuilderApp.ViewGameR2Finder" 
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
-        <Grid x:Name="mainGrid" ColumnSpacing="0" RowSpacing="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="7*" />
-                <RowDefinition Height="4*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <StackLayout x:Name="textStack" Grid.Row="0" Grid.Column="1" Spacing="0">
-                <Label TextColor="#5AA9D3" Text="Le but est de retrouver l'ensemble des unités R2 qui se sont cachés dans la grille." VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" />
-                <Label TextColor="#5AA9D3" Text="Tap pour poser/enlever un Astromech R2. Double-tap si tu es certain qu'il n'y a pas d'ennemi. Tu connais le nombre d'ennemis présent autour de la case." VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" />
+		<StackLayout Spacing="0" Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" HeightRequest="4000">
+            <StackLayout x:Name="textStack" Spacing="0">
                 <StackLayout Orientation="Horizontal" Spacing="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-                    <Label TextColor="#5AA9D3" BindingContext="{x:Reference board}" Text="{Binding FlaggedTileCount, StringFormat='R2-D2 trouvé : {0} '}" />
-                    <Label TextColor="#5AA9D3" BindingContext="{x:Reference board}" Text="{Binding BugCount, StringFormat=' sur {0}. '}" />
-                	<Label TextColor="#5AA9D3" x:Name="timeLabel" Text="Durée : 0:00" />
+                    <Label TextColor="#5AA9D3" BindingContext="{x:Reference board}" Text="{Binding FlaggedTileCount, StringFormat='Astromech trouvé : {0} '}" />
+                    <Label TextColor="#5AA9D3" BindingContext="{x:Reference board}" Text="{Binding BugCount, StringFormat=' sur {0}.'}" />
                 </StackLayout>
+               	<Label TextColor="#5AA9D3" x:Name="timeLabel" Text="Durée : 0:00" HorizontalOptions="Center" />
+				<Button x:Name="btRules" Text="Règles du jeu"/>
             </StackLayout>
-            <ContentView Grid.Row="1" Grid.Column="1" SizeChanged="OnBoardContentViewSizeChanged">
+            <ContentView SizeChanged="OnBoardContentViewSizeChanged" WidthRequest="4000" HeightRequest="4000">
                 <!-- Single-cell Grid for Board and overlays. -->
-                <Grid>
+                <Grid BackgroundColor="#5AA9D3">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
@@ -59,6 +50,6 @@
                             BorderColor="Black" BorderWidth="2" BackgroundColor="White" TextColor="Black" />
                 </Grid>
             </ContentView>
-        </Grid>
+		</StackLayout>
 	</ContentView.Content>
 </ContentView>
